--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -13,14 +13,17 @@
 
 h1 {
 	font-size: var(--text-size-4);
+	max-width: 25ch;
 }
 
 h2 {
 	font-size: var(--text-size-3);
+	max-width: 30ch;
 }
 
 h3 {
 	font-size: var(--text-size-2);
+	max-width: 30ch;
 }
 
 h4 {
@@ -33,19 +36,18 @@ h5, h6 {
 
 p,
 a,
+strong,
 li {
 	font-size: var(--text-size-0);
 	max-width: 60ch;
-}
-
-li {
 	line-height: var(--s2);
 }
 
 a {
-	text-decoration-color: var(--stone-blue);
-	text-decoration-thickness: 0.3em;
+	text-decoration-color: var(--lake-blue);
+	text-decoration-thickness: 0.15em;
 	text-decoration: underline;
+	color: var(--lake-blue);
 
 	&:hover {
 		text-decoration: none;
