--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+		<link rel="stylesheet" href="https://unpkg.com/modern-css-reset/dist/reset.min.css" />
 		<link rel="stylesheet" href="css/main.css">
 		<link href="https://unpkg.com/prismjs@1.9.0/themes/prism-tomorrow.css" rel="stylesheet">
 		<title>A11y Reporter</title>
